new proj/src/objects/GE_OG_Contact_Merge_History__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GE OG Contact Merge History</relationshipLabel>
        <relationshipName>GE_OG_Contact_Merge_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Annual_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Channel_or_GE_Contact__c</fullName>
        <label>Channel or GE Contact</label>
        <picklist>
            <picklistValues>
                <fullName>GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Contact_Merge__c</fullName>
        <label>Contact Merge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Merge History</relationshipLabel>
        <relationshipName>GE_OG_Contact_Merge_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_OG_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GE_OG_Contact_Merge_History_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Contact_Status__c</fullName>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_OG_Extension__c</fullName>
        <label>Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fax_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Fax__c</fullName>
        <label>Fax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Function__c</fullName>
        <label>Function</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Industry_Experience__c</fullName>
        <label>Industry Experience</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Language_Support__c</fullName>
        <label>Language Support</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Last_Stay_in_Touch_Request_Date__c</fullName>
        <label>Last Stay-in-Touch Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Last_Stay_in_Touch_Save_Date__c</fullName>
        <label>Last Stay-in-Touch Save Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_OG_Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mail_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_OG_NPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_OTC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OTC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Phone__c</fullName>
        <label>Main Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_OG_Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_OG_Primary_NAICS_Description__c</fullName>
        <label>Primary NAICS Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Public_Comments__c</fullName>
        <label>Public Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>GE OG Contact Merge History (Reports To)</relationshipLabel>
        <relationshipName>GE_OG_Contact_Merge_Reports_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <label>GE OG Contact Merge History</label>
    <nameField>
        <label>Merged Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GE OG Contact Merge History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>